# keepassxc-mcp

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.forgejo/workflows/: build-bridge.yml
bridge/: kpxc-bridge.c
bridge/resources/: kpxc-bridge.rc  resource.h
installer/: kpxc-bridge.nsi
src/: index.ts  kpxc-client.py  tcp-proxy.py
src/keepassxc_mcp/: __init__.py  __main__.py  client.py  server.py
