[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keepassxc-mcp"
version = "1.0.0"
description = "MCP server for KeePassXC password manager using the browser integration protocol"
requires-python = ">=3.10"
dependencies = [
    "pynacl>=1.5.0",
]

[project.scripts]
keepassxc-mcp = "keepassxc_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/keepassxc_mcp"]
