[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keepassxc-mcp"
version = "0.2.3"
description = "MCP server for KeePassXC password manager using the browser integration protocol"
license = {text = "BSD-2-Clause"}
authors = [{name = "Daniel Morante"}]
requires-python = ">=3.10"
dependencies = [
    "pynacl>=1.5.0",
]

[project.scripts]
keepassxc-mcp = "keepassxc_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/keepassxc_mcp"]
